--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-### stackhorse
+<head><title>stackhorse</title></head>
+<style>
+  body { font:helvetica 48pt; }
+  .name { margin: 300px }
+</style>
+<body>
+  <div class=name>stackhorse</div>
+</body>
