--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head><title>stackhorse</title></head>
 <style>
-  body { font:helvetica 48pt; }
+  body { font-family:helvetica 48pt; }
   .name { margin: 300px }
 </style>
 <body>
